kubernetes/apps/paperless-ngx/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: paperless-ngx
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
